--- a/css/style.css
+++ b/css/style.css
@@ -170,10 +170,15 @@ img {
 
 .main-header-logo {
   margin-top: 49px;
+  cursor: pointer;
 }
 
 .main-header-logo:active {
   opacity: 0.3;
+}
+
+.main-header-logo:hover {
+  opacity: 0.7;
 }
 
 .main-navigation {
